[package]
name = "cocoa"
description = "Bindings to Cocoa for OS X"
homepage = "https://github.com/servo/cocoa-rs"
repository = "https://github.com/servo/cocoa-rs"
version = "0.9.2"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"
build = "build.rs"

[lib]
name = "cocoa"
crate-type = ["rlib"]

[dependencies]
block = "0.1"
bitflags = "0.9"
libc = "0.2"
core-graphics = "0.8"
objc = "0.2"

[build-dependencies]
gcc = "0.3.35"
